add s3 storage for uploads

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 DATABASE_URL = ""
 JWT_SECRET = ""
 PAGE_SIZE = 1
+S3_BUCKET_NAME = ""
+S3_REGION_NAME = ""
+AWS_ACCESS_KEY = ""
+AWS_SECRET_ACCESS_KEY = ""
