--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pretest:e2e": "npm run prisma:test:deploy"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.391.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
